--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
   gtag('js', new Date());
 
   gtag('config', 'AW-448812149');
-  gtag('config', 'G-GQHWGHBT40');
 </script>
 </head>
 
 <title>Mirror Test</title>
-<p> Mirror Test </p>
-<a href = "conversion.html">Conversion</a>
-<a href = "conversion2.html">Conversion2</a>
+<p> Mirror Test Gclidless</p>
+
+<form id="form1">
+  Email: <input type="text" name="email"><br>
+  <input type="button" onclick="submitEmail()" value="Submit">
+</form>
+
+<script>
+function submitEmail() {
+  let form = document.getElementById("form1");
+  console.log(form.elements[0].value);
+  form.submit();
+}
+</script>
