--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <title>Mirror Test</title>
 <p> Mirror Test Gclidless</p>
 
-<form id="form1">
+<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+<form id="form1" target="dummyframe">
   Email: <input type="text" name="email"><br>
   <input type="button" onclick="submitEmail()" value="Submit">
 </form>
