--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <title>Mirror Test</title>
 <p> Mirror Test Gclidless</p>
 
+Mirror test is a comprehensive and well-defined test to run against a mirror. Learn how to run a gclidless test.
+
 <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
 <form id="form1" target="dummyframe">
   Email: <input type="text" name="email"><br>
