--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 Mirror test is a comprehensive and well-defined test to run against a mirror. Learn how to run a gclidless test.
 
+<img src="mirror.jpeg" alt="mirror">
+
 <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
 <form id="form1" target="dummyframe">
   Email: <input type="text" name="email"><br>
