--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Mirror test is a comprehensive and well-defined test to run against a mirror. Le
 <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
 <form id="form1" target="dummyframe">
   Email: <input type="text" name="email"><br>
-  <input type="button" onclick="submitEmail()" value="Submit">
+  <input type="button" name="submit" onclick="submitEmail()" value="Submit">
 </form>
 
 <script>
