test remove dummy iframe

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ Mirror test is a comprehensive and well-defined test to run against a mirror. Le
 <br>
 <img src="mirror.jpeg" alt="mirror">
 <br>
-<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
-<form id="form1" target="dummyframe">
+
+<form id="form1">
   Email: <input type="text" name="email"><br>
   <input type="button" onclick="submitEmail()" value="Submit">
 </form>
