--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Mirror test is a comprehensive and well-defined test to run against a mirror. Le
 <img src="mirror.jpeg" alt="mirror">
 <br>
 
-<form id="form1">
+<form id="form1" action="conversion.html">
   Email: <input type="text" name="email"><br>
   <input type="button" onclick="submitEmail()" value="Submit">
 </form>
