--- a/conversion.html
+++ b/conversion.html
@@ -10,18 +10,5 @@
   gtag('js', new Date());
 
   gtag('config', 'AW-448812149');
-  gtag('config', 'G-GQHWGHBT40');
 </script>
-<iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
-<form id="form1" target="dummyframe">
-  Email: <input type="text" name="email"><br>
-  <input type="button" onclick="submitEmail()" value="Submit">
-</form>
-
-<script>
-function submitEmail() {
-  let form = document.getElementById("form1");
-  console.log(form.elements[0].value);
-  form.submit();
-}
-</script>
+<p>Submitted</p>
